# sudoku-image-solver

./: .gitignore  DATASETS.md  FREEZE_CONTRACT.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: MODEL_PROVENANCE.md
models/frozen_v1/: manifest.json
models/frozen_v1/calibration/: calibration_manifest.json  digit_calibration.json  occ_calibration.json
models/frozen_v1/digits/: digit_cnn.pt
models/frozen_v1/occupancy/: occupancy_model.npz
scripts/: freeze_calibration_v1.py  run_frozen_eval_v1.py  train_segmentation_v1.py
src/sudoku_solver/: frozen_config.py  inference.py
tests/: test_goldset.py  test_metric_regression.py
tests/goldset/manifests/: gold_regression.jsonl
